# JacaBot

./: Cargo.toml  config.json
src/: config.rs  errors.rs  main.rs
src/commands/: mod.rs  pause.rs  ping.rs  repeat.rs  resume.rs  skip.rs  stop.rs
src/commands/play/: events.rs  mod.rs  rustube.rs  spotify.rs  youtube.rs
