[package]
name = "jacabot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "voice", "cache"] }
songbird = { version = "0.3.0", features = [ "builtin-queue" ] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.14"
rspotify =  "0.11.6"
serde_json = "1.0.90"
once_cell = "1.17.0"
