[package]
name = "jacabot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "voice", "cache"] }
songbird = { version = "0.3.0", features = [ "builtin-queue", "yt-dlp" ] }
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
rustube = { git = "https://github.com/Garoven/rustube" }
rspotify =  "0.11.6"
serde_json = "1.0.90"
reqwest = "0.11.14"
env_logger = "0.10.0"
log = "0.4.17"
